<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_import">
        <menu>
            <item android:id="@+id/nav_camara" android:icon="@android:drawable/ic_menu_camera"
                android:title="@string/nav_import_take" />
            <item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_gallery"
                android:title="@string/nav_import_get" />
        </menu>
    </item>
    <item android:title="@string/nav_sort">
        <menu>
            <item android:id="@+id/nav_title" android:icon="@android:drawable/ic_menu_sort_alphabetically"
                android:title="@string/nav_sort_name" />
            <item android:id="@+id/nav_date" android:icon="@android:drawable/ic_menu_my_calendar"
                android:title="@string/nav_sort_date" />
        </menu>
    </item>

</menu>